--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
 	},
+	"runArgs": ["--network=dev-network"],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
