--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,9 @@
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
 	},
 	"runArgs": ["--network=dev-network"],
+	"mounts": [
+		"source=/nas/media,target=/nas/media,type=bind"
+	],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
