--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'  # Trigger only on tags like v1.0.0
 
+permissions:
+  contents: write  # Required to create releases
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
