expose port 25004 to the host machine directly...

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,7 @@
 	"mounts": [
 		"source=/nas/media,target=/nas/media,type=bind"
 	],
+	"runArgs": ["-p", "25004:25004"],
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
